<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:background="@color/white"
    tools:context="com.yourdiscovery.discovery.main.LoginActivity">

    <TextView android:text="@string/string_discovery"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        style="@style/LogoTitle" android:id="@+id/login_txt_logo"/>

    <ImageView
    android:layout_width="@dimen/_120sdp"
    android:layout_height="@dimen/_140sdp"
    android:layout_centerHorizontal="true"
    android:layout_below="@id/login_txt_logo"
    android:src = "@drawable/bg_logohead"
    android:id="@+id/login_iv_logo"/>

    <!--user name-->
    <EditText
        android:layout_width="@dimen/_190sdp"
        android:layout_height="wrap_content"
        android:hint="@string/string_username"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/_15sdp"
        android:layout_below="@id/login_iv_logo"
        android:background="@drawable/bg_textfield"
        fontPath="fonts/georgia.ttf"
        android:gravity="center" android:id="@+id/login_txt_username"/>

    <!--password-->
    <EditText
        android:layout_width="@dimen/_190sdp"
        android:layout_height="wrap_content"
        android:hint="@string/string_password"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/_5sdp"
        android:layout_below="@id/login_txt_username"
        android:gravity="center"
        android:inputType="textPassword"
        android:background="@drawable/bg_textfield"
        fontPath="fonts/georgia.ttf"
        android:id="@+id/login_txt_password"/>

    <Button android:layout_width="@dimen/_170sdp"
        android:layout_height="@dimen/_62sdp"
        android:layout_below="@id/login_txt_password"
        android:layout_marginTop="@dimen/_8sdp"
        android:layout_centerHorizontal="true"
        style="@style/BlueButton"
        android:text="@string/string_login"
        android:id="@+id/login_btn_login"
        />

    <Button android:layout_width="@dimen/_140sdp"
        android:layout_height="@dimen/_68sdp"
        android:layout_below="@id/login_btn_login"
        android:layout_marginTop="@dimen/_8sdp"
        android:layout_centerHorizontal="true"
        android:text="@string/string_demo"
        android:id="@+id/login_btn_freetrial"
        style="@style/GreenButton"/>

</RelativeLayout>
