<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:background="@color/white"
    tools:context="com.yourdiscovery.discovery.main.survey.SurveyInfoActivity">

    <TextView android:text="@string/string_discovery"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        style="@style/LogoTitle" android:id="@+id/surveyinfo_txt_logo"/>

    <TextView android:text="@string/string_surveyinfo_desc"
        android:layout_below="@id/surveyinfo_txt_logo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingLeft="@dimen/_14sdp"
        android:paddingRight="@dimen/_14sdp"
        android:layout_centerHorizontal="true"
        android:gravity="center"
        android:textSize="@dimen/_18sdp"
        style="@style/SubTitle" android:id="@+id/surveyinfo_txt_desc"/>

    <!--first name-->
    <EditText
        android:layout_width="@dimen/_190sdp"
        android:layout_height="wrap_content"
        android:hint="@string/string_firstname"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/_8sdp"
        android:layout_below="@id/surveyinfo_txt_desc"
        android:inputType="textPersonName"
        android:background="@drawable/bg_textfield"
        android:gravity="center" android:id="@+id/surveyinfo_txt_firstname"/>

    <!--last name-->
    <EditText
        android:layout_width="@dimen/_190sdp"
        android:layout_height="wrap_content"
        android:hint="@string/string_lastname"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/_8sdp"
        android:background="@drawable/bg_textfield"
        android:inputType="textPersonName"
        android:layout_below="@id/surveyinfo_txt_firstname"
        android:gravity="center" android:id="@+id/surveyinfo_txt_lastname"/>

    <!--last name-->
    <EditText
        android:layout_width="@dimen/_190sdp"
        android:layout_height="wrap_content"
        android:hint="@string/string_email"
        android:inputType="textEmailAddress"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/_8sdp"
        android:background="@drawable/bg_textfield"
        android:layout_below="@id/surveyinfo_txt_lastname"
        android:gravity="center" android:id="@+id/surveyinfo_txt_email"/>

    <Button android:layout_width="@dimen/_170sdp"
        android:layout_height="@dimen/_62sdp"
        android:layout_below="@id/surveyinfo_txt_email"
        android:layout_marginTop="@dimen/_8sdp"
        android:layout_centerHorizontal="true"
        style="@style/BlueButton"
        android:text="@string/string_begindiscovery"
        android:textSize = "@dimen/_17sdp"
        android:id="@+id/surveyinfo_btn_begin"
        />

</RelativeLayout>
