<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/_5sdp"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:background="@drawable/tutorial_bg_gray"
    tools:context="com.yourdiscovery.discovery.main.SearchResultActivity">

    <TextView android:text="@string/string_searchresult_description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_centerHorizontal="true"
        style="@style/ResultDesciption" android:id="@+id/searchresult_txt_description"/>

    <TextView android:text="@string/string_searchresult_fullname"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_below="@id/searchresult_txt_description"
        style="@style/BlueLabel" android:id="@+id/searchresult_txt_fullname"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_5sdp"
        android:layout_below="@id/searchresult_txt_fullname"
        android:background="@drawable/bg_textfield"
        fontPath="fonts/georgia.ttf"
        android:id="@+id/searchresult_edit_fullname"/>

    <TextView android:text="@string/string_searchresult_emailaddr"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_below="@id/searchresult_edit_fullname"
        style="@style/BlueLabel" android:id="@+id/searchresult_txt_email"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_5sdp"
        fontPath="fonts/georgia.ttf"
        android:layout_below="@id/searchresult_txt_email"
        android:background="@drawable/bg_textfield"
        android:id="@+id/searchresult_edit_email"/>

    <Button android:layout_width="@dimen/_170sdp"
        android:layout_height="@dimen/_62sdp"
        android:layout_below="@id/searchresult_edit_email"
        android:layout_marginTop="@dimen/_8sdp"
        android:layout_centerHorizontal="true"
        style="@style/BlueButton"
        android:text="@string/string_searchresult_findit"
        android:id="@+id/searchresult_btn_findit"
        />
    <TextView android:text="@string/string_searchresult_type"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_below="@id/searchresult_btn_findit"
        android:textColor="@color/gray"
        style="@style/BlueLabel" android:id="@+id/searchresult_txt_type"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_5sdp"
        fontPath="fonts/georgia.ttf"
        android:editable="false"
        android:layout_below="@id/searchresult_txt_type"
        android:background="@drawable/bg_textfield"
        android:id="@+id/searchresult_txt_typeresult"/>

    <ImageView
        android:layout_width="@dimen/_120sdp"
        android:layout_height="@dimen/_140sdp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/_10sdp"
        android:layout_below="@id/searchresult_txt_typeresult"
        android:src = "@drawable/img_typeplaceholder"
        android:id="@+id/searchresult_iv_type"/>
</RelativeLayout>
